# Bali-Agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  init.py  mypy.ini  opencode.json  pyproject.toml
.agent/hooks/: claude_hook.py
.agent/team/: orchestrator.md
.claude/: settings.json
.codex/: config.toml
.cursor/rules/: bali-agent.mdc
.github/workflows/: ci.yml  test.yml  tests.yml
.opencode/agents/: discovery.md  planner.md  prd-writer.md  reviewer.md  sdd-architect.md  spec-implementer.md
.superpowers/sdd/: task-1-report.md  task-3-report.md  task-4-report.md  (+2 more)
bali_agent/: __init__.py  capabilities.py  cli.py  readme_audit.py
docs/: HANDOFF-v2-acabamento.md  PLAN-runtime-honesty-and-delivery.md  PRD-subagent-first-team-runtime.md  SDD-runtime-honesty-and-delivery.md  adapters.md  architecture.md  examples.md  installation.md  security.md  tests.md  threat_model.md
examples/: dry-run.md  prd-example.md  sdd-example.md
protocols/: approval-gates.md  handoff.md  memory.md  routing.md  subagents.md
scripts/: evaluate_runtime_truth.ps1
templates/: claude-settings.json  claude_hook.py  cursor-rule.mdc  git-pre-commit-shell  memory.md  prd.md  prevent_secrets.py  project-AGENTS.md  pull_request_template.md  run.py  sdd.md  subagent.config.yaml  verify_setup.py  working-context.md
tests/: __init__.py  conftest.py  test_agent_manager.py  test_base_structure.py  test_capabilities.py  test_claude_adapter.py  test_claude_surfaces.py  test_cli.py  test_context_packer.py  test_handoff.py  test_integration.py  test_memory.py  test_observability.py  test_policy.py  test_readme_audit.py  test_runner_security.py  test_runtime.py  test_runtime_orchestration.py  test_security.py  test_skills.py  test_subagent_orchestrator_contract.py
(+101 files in other folders)
